# ropeerto

./: .gitignore  .gitmodules  LICENSE  README.md
experiments/1_microbenchmarks/: README.md
experiments/1_microbenchmarks/hw/one_sided/: CMakeLists.txt
experiments/1_microbenchmarks/hw/one_sided/src/: vfpga_top.svh
experiments/1_microbenchmarks/hw/one_sided/src/hdl/: perf_fpga_axi_ctrl_parser.sv
experiments/1_microbenchmarks/hw/two_sided/: CMakeLists.txt
experiments/1_microbenchmarks/hw/two_sided/src/: vfpga_top.svh
experiments/1_microbenchmarks/hw/two_sided/src/hdl/: perf_local.sv
experiments/1_microbenchmarks/scripts/: plot_latency.py  plot_reads_writes.py  plot_throughput.py
experiments/1_microbenchmarks/sw/one_sided/: CMakeLists.txt
experiments/1_microbenchmarks/sw/one_sided/src/: main.cpp
experiments/1_microbenchmarks/sw/two_sided/src/: main.cpp
experiments/2_image_registration/: README.md
experiments/2_image_registration/hw/: CMakeLists.txt
experiments/2_image_registration/hw/bitstream/bitstream_16_16/: shell_top.ltx
experiments/2_image_registration/hw/bitstream/bitstream_8_8/: cyt_top.ltx
experiments/2_image_registration/hw/scripts/: generator.py
experiments/2_image_registration/hw/src/: init_ip.tcl  vfpga_top.svh
experiments/2_image_registration/hw/src/hls/mutual_information_master/: constants.h  histogram.hpp  mutual_info.hpp  mutual_information_master.cpp  utils.hpp
experiments/2_image_registration/sw/: CMakeLists.txt  ae.sh  compute_speedup.py  image_registration.cpp  mutual_information.cpp  p2p_image_registration.cpp  p2p_registration_step.cpp  reg_prog_registration_step.cpp  registration_step.cpp  transformation.cpp
experiments/2_image_registration/sw/HIPRigidWarp3D/: .gitignore  Makefile  README.md
experiments/2_image_registration/sw/HIPRigidWarp3D/src/: main.cpp  test_rigid_warp_hip.cpp  tests.h
experiments/2_image_registration/sw/HIPRigidWarp3D/src/cuda_kernels/iron_3D/: mutual-info-3D.cu  mutual-info-3D.cuh
experiments/2_image_registration/sw/HIPRigidWarp3D/src/cuda_kernels/iron_gpu/: mutual-info.cu  mutual-info.cuh
experiments/2_image_registration/sw/HIPRigidWarp3D/src/cuda_kernels/rigid_warp_xy_plane/: rigidWarpXYPlane.cu  rigidWarpXYPlane.cuh
experiments/2_image_registration/sw/HIPRigidWarp3D/src/hip_kernels/rigid_warp_xy_plane/: rigidWarpXYPlane.hip  rigidWarpXYPlane.hpp
experiments/2_image_registration/sw/HIPRigidWarp3D/src/software_mi/: software_mi.cpp  software_mi.hpp
experiments/2_image_registration/sw/HIPRigidWarp3D/src/utils/: args_parser.cpp  args_parser.h  hip_host_helpers.cpp  hip_host_helpers.h  images_io.cpp  images_io.h  timer.cpp  timer.hpp
experiments/2_image_registration/sw/irg_app/HAL/: HardwareAbstractionLayer.cpp  HardwareAbstractionLayer.h
experiments/2_image_registration/sw/irg_app/app/: imagefusion.hpp
experiments/2_image_registration/sw/irg_app/core/: fusion.hpp  fusion_algorithms.hpp  fusion_services.hpp  optimize.hpp  register.hpp  register_algorithms.hpp
experiments/2_image_registration/sw/irg_app/include/image_utils/: image_utils.hpp
experiments/2_image_registration/sw/irg_app/include/software_mi/: software_mi.hpp
experiments/2_image_registration/sw/irg_app/infrastructure/: file_repository.hpp
experiments/2_image_registration/sw/irg_app/interfaces/: image_repository.hpp
experiments/2_image_registration/sw/volumes/: image_generator.py
experiments/3_rdma_scatter/: README.md
experiments/3_rdma_scatter/hw/: CMakeLists.txt
experiments/3_rdma_scatter/hw/pregenerated_bitstreams/rdma_clean/: cyt_top.ltx
experiments/3_rdma_scatter/hw/pregenerated_bitstreams/rdma_scatter/: cyt_top.ltx
experiments/3_rdma_scatter/hw/rdma_scatter/src/: init_ip.tcl  vfpga_top.svh
experiments/3_rdma_scatter/hw/rdma_scatter/src/hdl/: rdma_scatter_axi_ctrl_parser.sv
experiments/3_rdma_scatter/logs/: baseline_lat.csv  baseline_thr.csv  init.txt  p2p_lat.csv  p2p_thr.csv  plot_generator.py  size.csv
experiments/3_rdma_scatter/sw/: CMakeLists.txt
experiments/3_rdma_scatter/sw/src/client_non_p2p/: main.cpp
experiments/3_rdma_scatter/sw/src/client_p2p/: main.cpp
experiments/3_rdma_scatter/sw/src/include/: constants.hpp
experiments/3_rdma_scatter/sw/src/server/: main.cpp
